force-app/main/default/objects/UDF__c/UDF__c.object-meta.xml
<CustomObject>
    <label>UDF</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>