force-app/main/default/objects/UDF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UDFs</relationshipLabel>
    <relationshipName>UDFs</relationshipName>
    <type>Lookup</type>
</CustomField>