force-app/main/default/objects/UDF__c/fields/DIMS_Field_Number__c.field-meta.xml
<CustomField>
    <fullName>DIMS_Field_Number__c</fullName>
    <label>DIMS Field Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>