force-app/main/default/objects/UDF__c/fields/Help_Message__c.field-meta.xml
<CustomField>
    <fullName>Help_Message__c</fullName>
    <label>Help Message</label>
    <length>40</length>
    <type>Text</type>
</CustomField>