force-app/main/default/objects/UDF__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>